<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivCardAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/six_space"
        android:src="@drawable/ic_card_add" />

    <TextView
        android:id="@+id/tvCardMessage"
        style="@style/DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/six_space"
        android:layout_marginTop="@dimen/four_space"
        android:layout_marginEnd="@dimen/six_space"
        android:gravity="center"
        tools:text="@string/card_message_create" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/six_space"
        android:layout_marginTop="@dimen/six_space"
        android:layout_marginEnd="@dimen/six_space"
        android:hint="@string/card_hint"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/colorTextCard"
        app:boxStrokeWidth="@dimen/half_space"
        app:errorEnabled="true"
        app:hintTextColor="?attr/colorTextCard">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCreateList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/et_card_hint"
            android:inputType="textCapSentences"
            android:maxLength="70"
            android:maxLines="1"
            android:textColor="?attr/colorCardText"
            app:hintTextColor="?attr/colorIconCardAdd" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/six_space"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNoCard"
            style="@style/DialogNoButton"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/dialog_no_card"
            android:textColor="?attr/colorTextCard" />

        <Button
            android:id="@+id/btnYesCard"
            style="@style/DialogYesButton"
            android:layout_marginStart="@dimen/minus_one_space"
            android:layout_marginEnd="@dimen/three_space"
            android:backgroundTint="@android:color/transparent"
            android:textColor="?attr/colorTextCard"
            tools:text="@string/dialog_yes_card_create" />

    </LinearLayout>

</LinearLayout>