<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivAttention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_space"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_attention" />

    <TextView
        android:id="@+id/tvDialogMessage"
        style="@style/DialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_space"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_message" />

    <LinearLayout
        android:id="@+id/ll_two_buttons_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/six_space"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/two_space">

        <Button
            android:id="@+id/btnNo"
            style="@style/DialogNoButton"
            android:layout_width="@dimen/zero_space"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/icon_light"
            android:text="@string/dialog_yes"
            android:textColor="@color/text_base" />

        <Button
            android:id="@+id/btnYes"
            style="@style/DialogYesButton"
            android:layout_width="@dimen/zero_space"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/two_space"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_base"
            android:text="@string/dialog_no"
            android:textColor="@color/text_light" />

    </LinearLayout>

</LinearLayout>