<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mylists.presentation.view.MyListsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixteen_space"
        android:visibility="visible"
        app:contentInsetStart="@dimen/zero_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/myLists"
            style="@style/ToolBarTitle"
            android:text="@string/myLists_screen_text" />

        <ImageView
            android:id="@+id/ivTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/two_space"
            android:layout_marginEnd="@dimen/one_space"
            android:src="@drawable/ic_icon_theme" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/zero_space"
            android:src="@drawable/ic_icon_delete"
            app:layout_constraintStart_toEndOf="@id/ivTheme" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/zero_space"
            android:src="@drawable/ic_icon_search"
            app:layout_constraintStart_toEndOf="@id/ivDelete" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchResults"
        android:layout_width="@dimen/zero_space"
        android:layout_height="@dimen/zero_space"
        android:background="?attr/colorToolBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        tools:listitem="@layout/item_my_list_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMyLists"
        android:layout_width="@dimen/zero_space"
        android:layout_height="@dimen/zero_space"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/two_space"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:listitem="@layout/item_my_list" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="placeholderMyLists,tvNoLists,tvCreateFirstList" />

    <ImageView
        android:id="@+id/placeholderMyLists"
        android:layout_width="@dimen/zero_space"
        android:layout_height="@dimen/zero_space"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/eleven_space"
        android:layout_marginTop="@dimen/sixteen_space"
        android:src="@drawable/placeholder_my_lists"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tvNoLists"
        style="@style/FirstTitle"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/eleven_space"
        android:gravity="center"
        android:text="@string/myLists_screen_no_lists"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderMyLists" />

    <TextView
        android:id="@+id/tvCreateFirstList"
        style="@style/RegularText"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/eleven_space"
        android:gravity="center"
        android:text="@string/myLists_screen_create_first_list"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoLists"
        app:layout_constraintVertical_bias="0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSearchNotFoundContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_space"
        android:background="?attr/colorToolBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch">

        <ImageView
            android:id="@+id/placeholderSearchNotFound"
            android:layout_width="@dimen/zero_space"
            android:layout_height="@dimen/zero_space"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/eleven_space"
            android:layout_marginTop="@dimen/sixteen_space"
            android:src="@drawable/placeholder_search_not_found"
            android:visibility="visible"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSearchNotFound"
            style="@style/FirstTitle"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/eleven_space"
            android:gravity="center"
            android:text="@string/myLists_screen_not_found"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeholderSearchNotFound" />

        <TextView
            android:id="@+id/tvTryAgain"
            style="@style/RegularText"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/eleven_space"
            android:gravity="center"
            android:text="@string/myLists_screen_try_again"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSearchNotFound"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/dimOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorViewBackground"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etSearch"
        style="@style/Search"
        android:background="?attr/colorToolBar"
        android:drawableStart="@drawable/ic_back_arrow_list"
        android:drawableEnd="@drawable/ic_clear"
        android:drawablePadding="@dimen/one_space"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_request"
        android:lines="1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/searchDivider"
        android:layout_width="@dimen/zero_space"
        android:layout_height="@dimen/one_dp"
        android:background="?attr/colorOnSurface"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/four_space"
        android:layout_marginBottom="@dimen/fourteen_space"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="?attr/colorPlus" />

</androidx.constraintlayout.widget.ConstraintLayout>